test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-26 16:21:38.942977

